# Chat-webhook

./: Cargo.toml
src/: key.txt  main.rs
src/jwt/: generate_jwt.rs  read_jwt.rs  structs.rs
src/jwt/base64url/: decode_b64.rs  encode_b64.rs
src/jwt/rsa/: decode_rsa.rs  encode_rsa.rs  generate_keys.rs
