[package]
name = "chat_webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum   = "0.7"
tokio  = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde", "clock"] }

rand = "0.9.1"

eframe = "0.27"
egui = "0.27"